Prevent line-break in nav links on SM breakpoint and up

--- a/assets/scss/uams-supporting/header.scss
+++ b/assets/scss/uams-supporting/header.scss
@@ -188,6 +188,10 @@
                 @include media-breakpoint-down(xs) {
                     padding: ($spacer * .5);
                 }
+
+                @include media-breakpoint-up(sm) {
+                    white-space: nowrap;
+                }
             }
         }
     }
